k8s/backend/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: backend-api
          image: ghcr.io/sayfullaev1999/crypto-trading-backend:IMAGE_TAG
          imagePullPolicy: Always

          command:
            - uvicorn
            - main:app
            - --host
            - 0.0.0.0
            - --port
            - "8000"
            - --no-access-log

          ports:
            - name: http
              containerPort: 8000

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
