k8s/backend/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  namespace: backend
spec:
  selector:
    app: backend-api
  ports:
    - name: http
      port: 8000
      targetPort: http
