k8s/backend/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-api
  namespace: backend
spec:
  ingressClassName: traefik

  rules:
    - host: crypto.dezz.uz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-api
                port:
                  number: 8000
